# 4EDU

./: .gitignore  LICENSE  MANIFEST.in  MIGRATION.md  README.md  pyproject.toml  release.sh  requirements.txt  setup-dev.sh  setup.py  verify-migration.py
.github/workflows/: build.yml
.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
flatpak/: io.github.p01t3rge1st.GeigerMonitor.appdata.xml  io.github.p01t3rge1st.GeigerMonitor.desktop  io.github.p01t3rge1st.GeigerMonitor.yml  org.example.GeigerMonitor.yml
src/geiger_monitor/: __init__.py  analog_gauge.py  main.py  main_window.py
